--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="radio" name="filter" value="完了" /> 完了
       </p>
     </form>
-    <p id="task"></p>
+    <!-- <p id="task"></p> -->
 
     <table class="content-table">
       <thead>
