feat: タスク絞り込み機能の追加

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <h1>ToDo リスト</h1>
-    <form action="#">
-      <p>
-        <input type="radio" name="filter" value="すべて" /> すべて
-        <input type="radio" name="filter" value="作業中" /> 作業中
-        <input type="radio" name="filter" value="完了" /> 完了
-      </p>
+    <form id="radioForm" name="radios" action="#">
+      <!-- <p> -->
+      <input type="radio" name="filter" value="すべて" /> すべて
+      <input type="radio" name="filter" value="作業中" /> 作業中
+      <input type="radio" name="filter" value="完了" /> 完了
+      <!-- </p> -->
     </form>
 
     <table class="content-table">
