--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   </head>
   <body>
     <h1>ToDo リスト</h1>
-    <form id="radioForm" name="radios" action="#">
-      <!-- <p> -->
-      <input type="radio" name="filter" value="すべて" /> すべて
-      <input type="radio" name="filter" value="作業中" /> 作業中
-      <input type="radio" name="filter" value="完了" /> 完了
-      <!-- </p> -->
+    <form id="radioForm" name="radios">
+      <input id="all" type="radio" name="filter" value="すべて" checked />
+      <label for="all">すべて</label>
+      <input id="doing" type="radio" name="filter" value="作業中" />
+      <label for="doing">作業中</label>
+      <input id="done" type="radio" name="filter" value="完了" />
+      <label for="done">完了</label>
     </form>
 
     <table class="content-table">
@@ -24,6 +25,7 @@
           <th>ID</th>
           <th>名前</th>
           <th>状態</th>
+          <!-- 削除ボタン追加用 -->
           <th></th>
         </tr>
       </thead>
@@ -31,7 +33,7 @@
     </table>
 
     <h2>新規タスクの追加</h2>
-    <form id="form" action="#" method="post">
+    <form id="textForm">
       <input id="text" type="text" placeholder="テキストを入力" />
       <button id="addButton" type="submit">追加</button>
     </form>
