refactor: コード修正、説明文追加
各関数に説明文をコメントアウトで追加
displayTask関数のコード修正
filterTask関数のコード修正
filterCheck関数の削除

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Todo App</title>
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/reset.css" /> -->
   </head>
   <body>
     <h1>ToDo リスト</h1>
     <form id="radioForm" name="radios">
-      <input id="all" type="radio" name="filter" value="すべて" checked />
+      <input id="all" type="radio" name="status" value="すべて" checked />
       <label for="all">すべて</label>
-      <input id="doing" type="radio" name="filter" value="作業中" />
+      <input id="doing" type="radio" name="status" value="作業中" />
       <label for="doing">作業中</label>
-      <input id="done" type="radio" name="filter" value="完了" />
+      <input id="done" type="radio" name="status" value="完了" />
       <label for="done">完了</label>
     </form>
 
