--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS TodoApp</title>
+    <title>JS Todo App</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>ToDo リスト</h1>
+    <form id="radioForm" name="radios">
+      <input id="all" type="radio" name="status" value="すべて" checked />
+      <label for="all">すべて</label>
+      <input id="doing" type="radio" name="status" value="作業中" />
+      <label for="doing">作業中</label>
+      <input id="done" type="radio" name="status" value="完了" />
+      <label for="done">完了</label>
+    </form>
+
+    <table class="content-table">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>名前</th>
+          <th>状態</th>
+        </tr>
+      </thead>
+      <tbody id="taskList"></tbody>
+    </table>
+
+    <h2>新規タスクの追加</h2>
+    <form id="textForm">
+      <input id="text" type="text" placeholder="テキストを入力" />
+      <button id="addButton" type="submit">追加</button>
+    </form>
+
+    <script src="main.js"></script>
+  </body>
 </html>
