--- a/index.html
+++ b/index.html
@@ -6,28 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Todo App</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
   </head>
   <body>
-    <h1>ToDo リスト</h1>
-    <form id="radioForm" name="radios">
-      <input id="all" type="radio" name="status" value="すべて" checked />
-      <label for="all">すべて</label>
-      <input id="doing" type="radio" name="status" value="作業中" />
-      <label for="doing">作業中</label>
-      <input id="done" type="radio" name="status" value="完了" />
-      <label for="done">完了</label>
-    </form>
+    <header>
+      <div class="header__title">
+        <h1>ToDoリスト</h1>
+      </div>
+      <form id="radioForm" name="radios">
+        <input id="all" type="radio" name="status" value="すべて" checked />
+        <label for="all">すべて</label>
+        <input id="doing" type="radio" name="status" value="作業中" />
+        <label for="doing">作業中</label>
+        <input id="done" type="radio" name="status" value="完了" />
+        <label for="done">完了</label>
+      </form>
+    </header>
 
-    <table class="content-table">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>名前</th>
-          <th>状態</th>
-        </tr>
-      </thead>
-      <tbody id="taskList"></tbody>
-    </table>
+    <hr />
+
+    <section>
+      <table class="content__table">
+        <thead>
+          <tr>
+            <th class="content__table-status">hoge</th>
+            <th class="content__table-name">hoge</th>
+            <th class="content__table-delete">hoge</th>
+          </tr>
+        </thead>
+        <tbody id="taskList"></tbody>
+      </table>
+    </section>
 
     <h2>新規タスクの追加</h2>
     <form id="textForm">
