--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
     <section>
       <table class="content__table">
-        <thead>
+        <!-- <thead>
           <tr>
-            <th class="content__table-status">hoge</th>
-            <th class="content__table-name">hoge</th>
-            <th class="content__table-delete">hoge</th>
+            <th class="content__table-status"></th>
+            <th class="content__table-name"></th>
+            <th class="content__table-delete"></th>
           </tr>
-        </thead>
+        </thead> -->
         <tbody id="taskList"></tbody>
       </table>
     </section>
