--- a/index.html
+++ b/index.html
@@ -26,23 +26,35 @@
     <hr />
 
     <section>
-      <table class="content__table">
-        <!-- <thead>
+      <form id="textForm">
+        <table class="content__table">
+          <!-- <thead>
           <tr>
             <th class="content__table-status"></th>
             <th class="content__table-name"></th>
             <th class="content__table-delete"></th>
           </tr>
         </thead> -->
-        <tbody id="taskList"></tbody>
-      </table>
+          <tbody id="taskList"></tbody>
+          <tr>
+            <td class="content__table-status">
+              <div class="contents__task-status"></div>
+            </td>
+            <td class="content__table-name" colspan="2">
+              <input id="text" type="text" placeholder="テキストを入力" />
+              <button id="addButton" type="submit">追加</button>
+            </td>
+          </tr>
+        </table>
+      </form>
     </section>
 
-    <h2>新規タスクの追加</h2>
-    <form id="textForm">
+    <!-- <h2>新規タスクの追加</h2> -->
+    <!-- <form id="textForm">
+      <div class="contents__task-status"></div>
       <input id="text" type="text" placeholder="テキストを入力" />
       <button id="addButton" type="submit">追加</button>
-    </form>
+    </form> -->
 
     <script src="main.js"></script>
   </body>
