feat: 状態ボタンのデザイン変更、テキストの色変更機能の追加
タスクの状態に合わせて下記が入れ替わるよう機能追加
- 状態ボタンのデザイン
- タスクのテキスト色

--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
             <th class="content__table-delete"></th>
           </tr>
         </thead> -->
+
+          <!-- タスクが追加される場所 -->
           <tbody id="taskList"></tbody>
+
+          <!-- タスク追加フォーム -->
           <tr>
             <td class="content__table-status">
-              <div class="contents__task-status"></div>
+              <div class="contents__table-status-div--done_out">
+                <div class="contents__table-status-div--done_in"></div>
+              </div>
             </td>
             <td class="content__table-name" colspan="2">
               <input id="text" type="text" placeholder="テキストを入力" />
