feat: DONEタスクがある場合のみフィルターボタンのテキストがトグルするよう機能追加

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <input id="done" type="radio" name="status" value="完了" />
         <label for="done">完了</label>
       </form> -->
+      <!-- <div id="filterButton" class="header__button" style="display: none"> -->
       <div id="filterButton" class="header__button">非表示</div>
     </header>
 
